--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -63,8 +63,9 @@ jobs:
         name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          merge-multiple: true
+          name: matrix.${{ matrix.environment }}
           path: .
+          pattern: matrix.*
       - id: list-files
         name: List files
         run: ls -la
