--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -63,6 +63,7 @@ jobs:
         name: Download artifacts
         uses: actions/download-artifact@v4
         with:
+          merge-multiple: true
           path: .
           pattern: matrix.*
       - id: list-files
