--- a/.github/workflows/new-release-branch.yml
+++ b/.github/workflows/new-release-branch.yml
@@ -12,12 +12,12 @@ jobs:
     steps:
       - name: Bad release branch creation
         run: |
-          echo "repository is ${{ github.repository }}"
-          echo "action repository is ${{ github.action_repository }}"
-          echo "event is ${{ github.event_name }}"
-          echo "head_ref is ${{ github.event.head_ref }}"
-          echo "base_ref is ${{ github.event.base_ref }}"
-          echo "ref_name is ${{ github.ref_name }}"
+          echo "repository: ${{ github.repository }}"
+          echo "action repository: ${{ github.action_repository }}"
+          echo "event: ${{ github.event_name }}"
+          echo "head_ref: ${{ github.head_ref }}"
+          echo "base_ref: ${{ github.base_ref }}"
+          echo "ref_name: ${{ github.ref_name }}"
           echo "branch protection: ${{ github.ref_protected }}"
           echo "You can only create release branches from the main branch"
           exit 1
