--- a/.github/workflows/new-release-branch.yml
+++ b/.github/workflows/new-release-branch.yml
@@ -6,9 +6,22 @@ on:
       - releases/**
 
 jobs:
+  repo-details:
+    runs-on: ubuntu-linux
+    steps:
+      - name: repository details
+        run: |
+          echo "repository: ${{ github.repository }}"
+          echo "default branch: ${{ github.event.repository.default_branch }}"
+          echo "action repository: ${{ github.action_repository }}"
+          echo "event: ${{ github.event_name }}"
+          echo "head_ref: ${{ github.head_ref }}"
+          echo "base_ref: ${{ github.base_ref }}"
+          echo "ref_name: ${{ github.ref_name }}"
+          echo "branch protection: ${{ github.ref_protected }}"
   enforce-base-branch:
     runs-on: ubuntu-latest
-    # if: github.event.head_ref != 'main'
+    # if: github.ref_name != github.event.repository.default_branch
     steps:
       - name: Bad release branch creation
         run: |
