--- a/.github/workflows/new-release-branch.yml
+++ b/.github/workflows/new-release-branch.yml
@@ -6,10 +6,11 @@ on:
       - releases/**
 
 jobs:
-  repo-details:
+  check-release-branch:
     runs-on: ubuntu-linux
+
     steps:
-      - name: repository details
+      - name: Repository details
         run: |
           echo "repository: ${{ github.repository }}"
           echo "default branch: ${{ github.event.repository.default_branch }}"
@@ -19,18 +20,8 @@ jobs:
           echo "base_ref: ${{ github.base_ref }}"
           echo "ref_name: ${{ github.ref_name }}"
           echo "branch protection: ${{ github.ref_protected }}"
-  enforce-base-branch:
-    runs-on: ubuntu-latest
-    if: github.ref_name != github.event.repository.default_branch
-    steps:
-      - name: Bad release branch creation
+      - name: Release branch not created from default branch
+        if: github.ref_name != github.event.repository.default_branch
         run: |
-          echo "repository: ${{ github.repository }}"
-          echo "action repository: ${{ github.action_repository }}"
-          echo "event: ${{ github.event_name }}"
-          echo "head_ref: ${{ github.head_ref }}"
-          echo "base_ref: ${{ github.base_ref }}"
-          echo "ref_name: ${{ github.ref_name }}"
-          echo "branch protection: ${{ github.ref_protected }}"
           echo "You can only create release branches from the main branch"
           exit 1
