--- a/.github/workflows/new-release-branch.yml
+++ b/.github/workflows/new-release-branch.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   check-release-branch:
-    runs-on: ubuntu-linux
+    runs-on: ubuntu-latest
 
     steps:
       - name: Repository details
